--- a/views/_layout.slim
+++ b/views/_layout.slim
@@ -22,9 +22,9 @@ html.article
         /     i.fa.fa-github.fa-inverse.fa-stack-1x
 
       .title-container
+        h1==article["title"]
         p.subtitle.author
           a href="/" Piotr Sokólski
-        h1==article["title"]
     .main
       .article-container
           article
@@ -35,3 +35,6 @@ html.article
     /! endinject
     /! inject:js
     /! endinject
+    / link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/dreampulse/computer-modern-web-font/master/fonts.css"
+    / style body {font-family: 'Computer Modern Serif'; }
+
