--- a/views/smartest-rc-car.slim
+++ b/views/smartest-rc-car.slim
@@ -1,6 +1,6 @@
 == Slim::Template.new('views/_layout.slim').render(Object.new, _head.merge(_car)) do
   markdown:
-    Here's a hardware project I've been recently busy with.
+    Here's a short introduction to a hardware project I've been recently busy with.
 
     With the imminent dawn of self-driving vehicles, the art and craft of developing the software and hardware remains elusive.
     It's no suprise: after all the domain is still very much in it's infancy.
