modified car3 link, car3 article now unused

--- a/views/_index.slim
+++ b/views/_index.slim
@@ -27,7 +27,7 @@ hr
 
 section id="projects"
   h2 Projects - Current
-  a.fullsize href="/smartest-rc-car.html"
+  a.fullsize href="/car3"
     div.thumbnail
       video width="auto" height="100%" autoplay=true muted=true loop=true poster="./images/car3.jpg"
         source src="./images/car3.mp4"
