--- a/views/_index.slim
+++ b/views/_index.slim
@@ -5,7 +5,7 @@ header
     li#mail
       a href="/PiotrSokolski.vcf" title="vCard"
         img src="/images/vcard-alt.svg"
-      a href="mailto:p@pyetras.com" title="p@pyetras.com" p@pyetras.com
+      a href="mailto:pietraswithin@gmail.com" title="pietraswithin@gmail.com" pietraswithin@gmail.com
   #whereabouts
     h2 whereabouts
     ul#whereabouts-list
